# python-calculator

./: calculator.py  config.py  pyproject.toml  test_calculator.py
.github/workflows/: reusable-test.yml  test.yml  use-reusable.yml
